# Ki-predictions

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
data/: example_dataset.csv
scripts/: run_notebook.py  smoke_check.py
src/apb_ki_modelling/: __init__.py  data.py  descriptors.py
