[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apb-ki-modelling"
version = "0.1.0"
description = "Applied Pharmaceutical Bioinformatics Ki modelling workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]
